// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoaderControl Check loader control 1`] = `
Array [
  Object {
    "background-palette-color-general": 1,
    "background-palette-color-status-general": true,
    "display-general": "block",
    "id": 1,
    "isHover": false,
    "type": "color",
  },
]
`;

exports[`LoaderControl Check loader control 2`] = `
Array [
  Object {
    "background-palette-color-general": 1,
    "background-palette-color-status-general": true,
    "display-general": "block",
    "id": 1,
    "isHover": false,
    "type": "color",
  },
  Object {
    "background-image-attachment-general": "scroll",
    "background-image-clip-general": "border-box",
    "background-image-height-general": 100,
    "background-image-height-unit-general": "%",
    "background-image-opacity-general": 1,
    "background-image-origin-general": "padding-box",
    "background-image-parallax-direction": "down",
    "background-image-parallax-speed": 4,
    "background-image-parallax-status": false,
    "background-image-position-general": "center center",
    "background-image-position-height-general": 0,
    "background-image-position-height-unit-general": "%",
    "background-image-position-width-general": 0,
    "background-image-position-width-unit-general": "%",
    "background-image-repeat-general": "no-repeat",
    "background-image-size-general": "auto",
    "background-image-width-general": 100,
    "background-image-width-unit-general": "%",
    "display-general": "block",
    "id": 2,
    "isHover": false,
    "type": "image",
  },
]
`;

exports[`LoaderControl Check loader control 3`] = `
Array [
  Object {
    "background-palette-color-general": 1,
    "background-palette-color-status-general": true,
    "display-general": "block",
    "id": 1,
    "isHover": false,
    "type": "color",
  },
  Object {
    "background-image-attachment-general": "scroll",
    "background-image-clip-general": "border-box",
    "background-image-height-general": 100,
    "background-image-height-unit-general": "%",
    "background-image-opacity-general": 1,
    "background-image-origin-general": "padding-box",
    "background-image-parallax-direction": "down",
    "background-image-parallax-speed": 4,
    "background-image-parallax-status": false,
    "background-image-position-general": "center center",
    "background-image-position-height-general": 0,
    "background-image-position-height-unit-general": "%",
    "background-image-position-width-general": 0,
    "background-image-position-width-unit-general": "%",
    "background-image-repeat-general": "no-repeat",
    "background-image-size-general": "",
    "background-image-size-m": "",
    "background-image-width-general": 100,
    "background-image-width-unit-general": "%",
    "display-general": "block",
    "id": 2,
    "isHover": false,
    "type": "image",
  },
]
`;

exports[`LoaderControl Check loader control 4`] = `
Array [
  Object {
    "background-palette-color-general": 1,
    "background-palette-color-status-general": true,
    "display-general": "block",
    "id": 1,
    "isHover": false,
    "type": "color",
  },
  Object {
    "background-image-attachment-general": "scroll",
    "background-image-clip-general": "border-box",
    "background-image-height-general": 100,
    "background-image-height-unit-general": "%",
    "background-image-opacity-general": 1,
    "background-image-origin-general": "padding-box",
    "background-image-parallax-direction": "down",
    "background-image-parallax-speed": 4,
    "background-image-parallax-status": false,
    "background-image-position-general": "center center",
    "background-image-position-height-general": 0,
    "background-image-position-height-unit-general": "%",
    "background-image-position-width-general": 0,
    "background-image-position-width-unit-general": "%",
    "background-image-repeat-general": "no-repeat",
    "background-image-size-general": "",
    "background-image-size-m": "",
    "background-image-width-general": 100,
    "background-image-width-unit-general": "%",
    "display-general": "block",
    "id": 2,
    "isHover": false,
    "type": "image",
  },
]
`;

exports[`LoaderControl Check loader control 5`] = `
Array [
  Object {
    "background-palette-color-general": 1,
    "background-palette-color-status-general": true,
    "display-general": "block",
    "id": 1,
    "isHover": false,
    "type": "color",
  },
  Object {
    "background-image-attachment-general": "scroll",
    "background-image-clip-general": "border-box",
    "background-image-height-general": 100,
    "background-image-height-unit-general": "%",
    "background-image-opacity-general": 1,
    "background-image-origin-general": "padding-box",
    "background-image-parallax-direction": "down",
    "background-image-parallax-speed": 4,
    "background-image-parallax-status": false,
    "background-image-position-general": "center center",
    "background-image-position-height-general": 0,
    "background-image-position-height-unit-general": "%",
    "background-image-position-width-general": 0,
    "background-image-position-width-unit-general": "%",
    "background-image-repeat-general": "no-repeat",
    "background-image-size-general": "",
    "background-image-size-m": "",
    "background-image-width-general": 100,
    "background-image-width-unit-general": "%",
    "display-general": "block",
    "id": 2,
    "isHover": false,
    "type": "image",
  },
]
`;
